[gd_scene load_steps=2 format=3 uid="uid://halmtrjf40ru"]

[ext_resource type="Script" path="res://scenes/towers/tower.gd" id="1_h1wk7"]

[node name="Tower" type="StaticBody2D"]
script = ExtResource("1_h1wk7")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="FireDelay" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
debug_color = Color(0, 0.6, 0.7, 0.42)

[node name="ProjectileSpawn" type="Node2D" parent="."]

[connection signal="timeout" from="FireDelay" to="." method="_on_fire_delay_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
